--- a/src/pages/NewCardAddPage/newCard.module.css
+++ b/src/pages/NewCardAddPage/newCard.module.css
@@ -1,30 +1,23 @@
 .cardPageWrapper {
-    padding: 24px;
+  padding: 24px;
+
+  max-width: 500px;
 }
 
 .сardPage {
-    display: flex;
-    flex-direction: row;
-}
-
-.title {
-    display: flex;
-    flex-direction: column;
-    float: left;
-    padding: 0 1rem;
-    width: auto;
-    height: auto;
-}
-
-.add {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  display: flex;
+  flex-direction: column;
 }
 
 .content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 1rem;
+  display: flex;
+
+  margin: 1rem 1rem 1rem 0;
+}
+
+.field {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
